2006-04-26  James Turner  <james@worldforge.org>

	* Eris/Avatar.cpp, Eris/Avatar.h: add ::useStop(), a helper to send an
	  empty use operation, signifying that the current task should be halted.

2006-02-16  Simon Goodall  <simon@simongoodall.co.uk>

	* Eris/Calendar.h: Export secondsPerMinute();

2006-01-29  James Turner  <james@worldforge.org>

	* Eris/Connection.cpp: catch Atlas exceptions which occur during dispatch,
	  and emit an Eris error.
	  
	* Eris/Account.cpp: silence a warning when clients retrieve an incomplete
	  character dictionary from the account.

2006-01-21  James Turner  <james@worldforge.org>

	* Eris/IGRouter.cpp: warn if a sight(action) is received with no FROM set,
	  instead of silently ignoring this case.

2006-01-18  James Turner  <james@worldforge.org>

	* Eris/Avatar.cpp, Eris/Avatar.h, Eris/Entity.h, Eris/Entity.cpp: move
	  getUseOperations() function from Avatar to Entity, which client authors
	  tell me is more natural.
	  
	* test/avatarTest.cpp: update wield test for revised API.

	* Eris/Calendar.h: add extra accessor methods to Calendar, so Simon can
	  calculate dusk and dawn shading as before.

2005-01-04  Al Riddoch  <alriddoch@zepler.org>

	* eris.spec.in: Remove explicit dependency on Atlas-C++06, and let
	  automatic dependencies handle it.

2005-01-04  Al Riddoch  <alriddoch@zepler.org>

	* Release 1.3.10, Interface version 11.

2006-01-04  James Turner  <james@worldforge.org>

	* Eris/Timeout.cpp: fix a crash when timeouts are cancelled - need to
	  unregister from the timed event service

2006-01-04  James Turner  <james@worldforge.org>

	* Eris/TimedEventService.cpp: remove an over-zealous assert

2006-01-04  Al Riddoch  <alriddoch@zepler.org>

	* configure.ac: Increment interface version.

	* test/avatarTest.h, test/calendarTest.h: Add missing newlines to ends
	  of files.

2006-01-03  James Turner  <james@worldforge.org>

	* Eris/Response.cpp: fix a missing return identified by Al
	